<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EATreasureHuntActivity" 
    android:keepScreenOn="true">
       
    <RelativeLayout 
        android:orientation="vertical" 
        android:layout_height="wrap_content" 
        android:layout_width="680dip"   
        android:id="@+id/mapHolder" >
    	<ImageView
        	android:id="@+id/treasureMap"
      		style="@style/WidthHeightWrap"
			android:scaleType="matrix"
       	 	android:src="@drawable/treasure_map" />
    	<ImageView
        	android:id="@+id/mapScale"
        	android:layout_height="wrap_content" 
        	android:layout_width="match_parent" 
        	android:scaleType="matrix"
        	android:layout_alignBottom="@+id/treasureMap"
        	android:layout_alignParentLeft="true" 
       	 	android:src="@drawable/scale" />
    </RelativeLayout>
    
    <LinearLayout
       android:id="@+id/compassHolder"
       android:layout_width="100dip"
       android:layout_height="wrap_content"
       android:layout_toRightOf="@id/mapHolder"
       android:orientation="vertical">
       <ImageView
        	android:id="@+id/warning"
      		style="@style/WidthHeightWrap"
       	 	android:src="@drawable/warning"
       	 	android:layout_weight="14" 
       	 	android:scaleType="centerInside"/>
       <ImageView
        	android:id="@+id/compass"
      		style="@style/WidthHeightWrap"
       	 	android:src="@drawable/compass"
       	 	android:layout_weight="6" 
       	 	android:scaleType="centerInside"/>  	 
       <ImageView
        	android:id="@+id/keys"
      		style="@style/WidthHeightWrap"
       	 	android:src="@drawable/keys"
       	 	android:layout_weight="11" 
       	 	android:scaleType="centerInside"/>     	      	
    </LinearLayout>
    <LinearLayout 
        android:orientation="vertical" 
        android:layout_height="150dip" 
        android:layout_width="150dip"  
        android:id="@+id/glLayoutHolder" 
        android:layout_toRightOf="@id/compassHolder">  
        <TextView android:id="@+id/txtExtraPrize"
            style="@style/WidthHeight.Link"
            android:text="@string/extra_prize" />   
    </LinearLayout>
    <ScrollView
        android:id="@+id/clueScroll"
     	android:layout_width="fill_parent" 
     	android:layout_height="wrap_content"
     	android:scrollbars="vertical"
        android:layout_toRightOf="@id/compassHolder"
        android:layout_below="@id/glLayoutHolder" >   
   <LinearLayout 
        android:orientation="vertical" 
        android:layout_height="fill_parent" 
        android:layout_width="match_parent"    >
    	<!-- android:text="Continue walking in same direction then turn north west into Saxe Coburg Street. \n a) What building is at X on the map? \n b) What is the phone number of the office for this building?"-->
        <TextView 
            android:id="@+id/txtSubtitles"
            android:layout_gravity="center"
            android:text="@string/migrate_instruction"
            style="@style/WidthHeightWrap"/>
            
        <ImageView
         	android:id="@+id/symbol"
         	style="@style/WidthHeightWrap"
         	android:layout_gravity="center"
         	android:visibility="invisible"/>
        
        <Spinner
			android:id="@+id/spAnswers"
			style="@style/WidthHeightWrap" 
			android:visibility="invisible" />
               
        <Button android:id="@+id/btnProceed"
            android:layout_gravity="center"
        	style="@style/DialogButton" 
        	android:text="@string/start_hunt"
        	android:visibility="invisible" />
        
        <Button android:id="@+id/btnPlayAgain"
            android:layout_gravity="center"
        	style="@style/DialogButton" 
        	android:text="@string/play_again"
        	android:visibility="invisible" />
        
        <Button android:id="@+id/btnMigrate"
            android:layout_gravity="center"
        	style="@style/DialogButton" 
        	android:text="@string/invite_migrate"
        	android:visibility="invisible"/>
        
         <!--  Error message -->
         <TextView android:id="@+id/txtError"
            style="@style/WidthHeight.Error"
            android:text="@string/prompt_answer"
            android:visibility="invisible" />           
       
        <!-- TextView 
            android:id="@+id/textRepeat"
            android:layout_gravity="center"
            style="@style/WidthFillHeightWrap"/-->     
    </LinearLayout>
    </ScrollView>
      
</RelativeLayout>
